@@ -1,6 +1,7 @@
 scim-sayura (0.3.3-1) unstable; urgency=low
 
-  * Initial RPM packaging.
+  * Initial RPM packaging
+  * Intuitive behaviour of al kireema after vowels and modifiers
 
  -- Anuradha Ratnaweera <anuradha@taprobane.org>  Mon, 26 May 2008 12:00:00 +0530
 
