@@ -1,3 +1,7 @@
+2008-05-28 Anuradha Ratnaweera <anuradha@taprobane.org>
+
+	* Intuitive behaviour of al kireema after vowels and modifiers.
+
 2008-05-26 Anuradha Ratnaweera <anuradha@taprobane.org>
 
 	* Initial RPM packaging.
